<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackgroundRed"
    tools:context=".ui.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_login"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="48dp"
                android:gravity="center_horizontal"
                android:text="@string/screen_login"
                android:textColor="@color/white_50"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:viewBindingIgnore="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lyt_email"
                style="@style/Theme.ClinicsApp.TextInputLayout.White"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="48dp"
                android:hint="@string/label_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="noExcludeDescendants"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="12dp"
                    android:theme="@style/ThemeOverlay.ClinicsApp.TextInputEditText.White"
                    tools:text="memiljamel@gmail.com" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lyt_password"
                style="@style/Theme.ClinicsApp.TextInputLayout.White"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/label_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lyt_email"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="noExcludeDescendants"
                    android:inputType="textPassword"
                    android:paddingBottom="12dp"
                    android:theme="@style/ThemeOverlay.ClinicsApp.TextInputEditText.White"
                    tools:text="12345678" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/vertically_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <CheckBox
                android:id="@+id/cbx_remember"
                style="@style/Theme.ClinicsApp.CheckBox.White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:checked="true"
                android:drawableStart="@android:color/transparent"
                android:drawablePadding="4dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/remember_me"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/vertically_guideline"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lyt_password" />

            <TextView
                android:id="@+id/tv_forgot"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/forgot_password"
                android:textColor="?attr/colorTextBackgroundRed"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/cbx_remember"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@id/vertically_guideline"
                app:layout_constraintTop_toTopOf="@id/cbx_remember" />

            <Button
                android:id="@+id/btn_login"
                style="@style/Theme.ClinicsApp.Button.White"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/btn_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cbx_remember"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/tv_register"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:gravity="center_horizontal"
                android:text="@string/have_not_an_account"
                android:textColor="?attr/colorTextBackgroundRed"
                android:textColorLink="?attr/colorButtonWhite"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_login"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_bar"
        style="@style/Theme.ClinicsApp.LinearProgressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone" />

</FrameLayout>
