<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackgroundRed"
    tools:context=".ui.home.HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_app_name"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/white_50"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@+id/tv_welcome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintWidth_percent="0.75"
                tools:viewBindingIgnore="true" />

            <TextView
                android:id="@+id/tv_welcome"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:gravity="center_horizontal"
                android:text="@string/welcome_messages"
                android:textColor="@color/white_50"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_about"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_app_name"
                app:layout_constraintWidth_percent="0.75"
                tools:viewBindingIgnore="true" />

            <Button
                android:id="@+id/btn_about"
                style="@style/Theme.ClinicsApp.Button.White"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="56dp"
                android:stateListAnimator="@null"
                android:text="@string/screen_about"
                app:cornerRadius="50dp"
                app:elevation="0dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_doctor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
                app:layout_constraintWidth_percent="0.75" />

            <Button
                android:id="@+id/btn_doctor"
                style="@style/Theme.ClinicsApp.Button.White"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:stateListAnimator="@null"
                android:text="@string/screen_doctor"
                app:cornerRadius="50dp"
                app:elevation="0dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_patient"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_about"
                app:layout_constraintWidth_percent="0.75" />

            <Button
                android:id="@+id/btn_patient"
                style="@style/Theme.ClinicsApp.Button.White"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:stateListAnimator="@null"
                android:text="@string/screen_patient"
                app:cornerRadius="50dp"
                app:elevation="0dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_queue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_doctor"
                app:layout_constraintWidth_percent="0.75" />

            <Button
                android:id="@+id/btn_queue"
                style="@style/Theme.ClinicsApp.Button.White"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:stateListAnimator="@null"
                android:text="@string/screen_queue"
                app:cornerRadius="50dp"
                app:elevation="0dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_forms"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_patient"
                app:layout_constraintWidth_percent="0.75" />

            <Button
                android:id="@+id/btn_forms"
                style="@style/Theme.ClinicsApp.Button.White"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:stateListAnimator="@null"
                android:text="@string/screen_forms"
                app:cornerRadius="50dp"
                app:elevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_queue"
                app:layout_constraintWidth_percent="0.75" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Theme.ClinicsApp.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            app:title="" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_bar"
        style="@style/Theme.ClinicsApp.LinearProgressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone" />

</FrameLayout>
